--- a/DemoProject/app/src/main/AndroidManifest.xml
+++ b/DemoProject/app/src/main/AndroidManifest.xml
@@ -9,13 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity android:name=".activity.SpinnerActivity">
+
+        </activity>
+        <activity android:name=".activity.MenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.PicassoActivity" />
+        <activity android:name=".activity.DemoExtraActivity" />
     </application>
 
 </manifest>
